# ist-p3d-proj

./: CMakeLists.txt  DistributionRayTracer.sln
DistributionRayTracer/: boundingBox.cpp  boundingBox.h  bvh.cpp  camera.h  color.h  main.cpp  maths.h  rayAccelerator.h  scene.cpp  vector.h
src/: DistributionRayTracer.vcxproj  camera.h  grid.cpp  main.cpp  scene.cpp  scene.h  vector.cpp  vector.h
